working selecting value

--- a/main/index.html
+++ b/main/index.html
@@ -21,6 +21,7 @@
       <!-- <input type="submit" /> -->
       <button class="btn" type="submit">Submit</button>
     </form>
+    <button onclick="save()"></button>
 
     <div>
       <div class="text-center">
