--- a/index/index.html
+++ b/index/index.html
@@ -15,9 +15,9 @@
         <h1>Spadek sprężysty piłeczki</h1>
       </header>
       <nav>
-        <div>Strona główna</div>
-        <div>Rejestracja</div>
-        <div>Logowanie</div>
+        <div><a href="index.html">Strona główna</a></div>
+        <div><a href="reg.html">Rejestracja</a></div>
+        <div><a href="log.html">Logowanie</a></div>
       </nav>
       <section>
         <form id="height-form">
