--- a/log.html
+++ b/log.html
@@ -1,20 +1,20 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="pl">
   <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Logowanie do serwisu</title>
   <!-- <link rel="stylesheet" href="styles/login.css" /> -->
-  <link rel="stylesheet" href="form.css" />
+  <link rel="stylesheet" href="form.css">
 
   </head>
   <body>
    <div class="container">
      <form name="test" method="post" action="log.php">
-        Podaj e-mail:<input type="text" name="email"><br/>
-        Podaj hasło:<input type="password" name="pass"><br/>
+        Podaj e-mail:<input type="email" name="email"><br>
+        Podaj hasło:<input type="password" name="pass"><br>
         <input type="submit">
      </form>   
-      <a id="getBack" href='index.php'>Powrot do strony głównej</a>
+      <a class="getBack" href='index.php'>Powrot do strony głównej</a>
    </div>
   </body>
 </html>
