--- a/reg.html
+++ b/reg.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="pl">
   <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Formularz rejestracyjny</title>
-  <link rel="stylesheet" href="form.css" />
+  <link rel="stylesheet" href="form.css">
   </head>
   <body>
    <div class="container">
       <form name="test" method="post" action="reg.php">
-         Podaj imię:<input type="text" name="fname"><br/>
-         Podaj nazwisko:<input type="text" name="lname"><br/>
-         Podaj e-mail:<input type="email" name="email"><br/>
+         Podaj imię:<input type="text" name="fname"><br>
+         Podaj nazwisko:<input type="text" name="lname"><br>
+         Podaj e-mail:<input type="email" name="email"><br>
          Podaj hasło:<input type="password" name="pass">
          <input type="submit">
       </form>   
